# Inception-Bot

./: .env.example  .gitignore  pyproject.toml
config/: default.toml
src/polynotify/: config.py  main.py  monitor.py  store.py
src/polynotify/notify/: base.py  formatter.py  telegram.py  whatsapp.py
tests/: test_formatter.py  test_monitor.py  test_store.py
